[gd_scene load_steps=4 format=3 uid="uid://ds8hmik5aexdu"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_w6bej"]
[ext_resource type="PackedScene" uid="uid://b8fiaonygdcip" path="res://scenes/gui.tscn" id="2_vk4lm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qoiju"]
size = Vector2(45, 118)

[node name="Game" type="Node2D"]
script = ExtResource("1_w6bej")

[node name="Gui" parent="." instance=ExtResource("2_vk4lm")]
offset_left = -490.0
offset_top = 131.0
offset_right = -490.0
offset_bottom = 131.0

[node name="Bottles" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -40)
zoom = Vector2(2, 2)

[node name="BottlesSpawnPosition" type="Marker2D" parent="."]
position = Vector2(-553, 4)

[node name="BottleTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="DeliveryPlace" type="Area2D" parent="."]
position = Vector2(571, 0)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeliveryPlace"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_qoiju")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
z_as_relative = false
offset_left = -583.0
offset_top = -18.0
offset_right = -543.0
offset_bottom = 22.0
scale = Vector2(29.3765, 2.74043)
mouse_filter = 2
color = Color(0.0253638, 0.0253638, 0.0253638, 1)

[connection signal="timeout" from="BottleTimer" to="." method="_on_bottle_timer_timeout"]
[connection signal="body_entered" from="DeliveryPlace" to="." method="_on_delivery_place_body_entered"]
